<resources>
    <string name="app_name">Editor</string>
    <string name="action_OpenGallery">Open Gallery</string>
    <string name="action_Hist">Histogram</string>
    <string name="enhance_gs">Enhance GS</string>
    <string name="enhance_gs_small">EGS</string>
    <string name="action_ctgs">Gray Scale</string>
    <string name="action_eqgsistring">Histogram Equalization</string>
    <string name="action_enhanceHSV">HSV</string>
    <string name="action_RGB">Enhance RGB</string>
    <string name="action_enhanceRGB_small">ERGB</string>
    <string name="action_enhance_red_small">ER</string>
    <string name="action_enhance_red">Enhance Red</string>
    <string name="action_enhance_green_small">EG</string>
    <string name="action_enhance_green">Enhance Green</string>
    <string name="action_enhance_red_green_small">ERG</string>
    <string name="action_enhance_red_green">Enhance Red|Green</string>
    <string name="action_enhance_green_blue">Enhance Green|Blue</string>
    <string name="action_enhance_green_blue_small">EGB</string>
    <string name="action_enhance_red_blue">Enhance Red|Blue</string>
    <string name="action_enhance_red_blue_small">ERB</string>
    <string name="action_enhance_blue">Enhance Blue</string>
    <string name="action_enhance_blue_small">EB</string>
    <string name="send_to">Sharing Image</string>
    <string name="menu_next_curve_filter">Next Curve</string>
    <string name="menu_text_convulotion_filter">Next Kernel</string>
    <string name="no_image">No Image Available</string>
    <string name="load_image">You need to load an image first!</string>
    <string name="image_saved">Image Saved</string>
</resources>
