<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_openGallery"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_OpenGallery" />
    <item android:id="@+id/action_Hist"
        android:orderInCategory="101"
        app:showAsAction="never"
        android:title="@string/action_Hist"></item>
    <item
        android:id="@+id/enhance_gs"
        android:title="@string/enhance_gs"
        android:enabled="true"
        android:visible="true"
        app:showAsAction="always"
        android:titleCondensed="@string/enhance_gs_small">
        <menu>
            <item
                android:id="@+id/action_togs"
                android:title="@string/action_ctgs"/>
            <item
                android:id="@+id/action_egs"
                android:title="@string/action_eqgsistring"/>
        </menu>
    </item>
</menu>